# liteMineSweeper

./: README.md  meson.build
.cache/clangd/index/: main.cpp.3307A91B3826CA14.idx  objects.cpp.A2B2118DD702E4F5.idx  objects.h.E4DA368DDA45DDAC.idx
include/: objects.h
src/: main.cpp  objects.cpp
