project(
  'MineSweeper',
  'cpp',
  version : '0.1',
  meson_version : '>= 1.3.0',
  default_options : ['warning_level=3', 'cpp_std=c++14'],
)

raylib_dep = dependency('raylib', required: true)
dependencies = [
  raylib_dep,
]

src = [
  'src/main.cpp',
]

exe = executable(
  'MineSweeper',
  src,
  install : true,
  dependencies : dependencies,
)

test('basic', exe)
